--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 		<footer class="footer py-4 mx-3 fixed-bottom">
 			<form id="submit-form" class="d-flex justify-content-between form-control">
 		<input type="text" value="" class="form-control mr-5 input-msg" placeholder="Type your message">			
-		<a href=""> 
-		<i class="fa fa-send" type="button"></i></a>
+	
+		<button type="submit"><i class="fa fa-send"></i></button>
 		
 	</form>
 		</footer>		
