--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			<form id="submit-form" class="d-flex justify-content-between form-control">
 		<input type="text" value="" class="form-control mr-5 input-msg" placeholder="Type your message">			
 	
-		<button type="submit"><i class="fa fa-send"></i></button>
+		<a href="#"><i class="fa fa-send"></i></a>
 		
 	</form>
 		</footer>		
