--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 	
 					
 		
-		<footer class="footer py-4 mx-3 fixed-bottom">
+		<footer class="footer py-2 mx-3 fixed-bottom">
 			<form id="submit-form" class="d-flex justify-content-between form-control">
-		<input type="text" value="" class="form-control mr-5 input-msg" placeholder="Type your message">			
+		<input type="text" value="" class="form-control border-0 mr-5 input-msg" placeholder="Type your message">			
 	
 		<a href="#"><i class="fa fa-send"></i></a>
 		
