--- a/index.html
+++ b/index.html
@@ -78,9 +78,7 @@
 					
 		
 
-		<footer class="d-flex justify-content-center footer py-2 px-3">
-
-		<footer class="footer py-2 mx-3 fixed-bottom">
+		<footer class="footer py-2 px-3">
 
 			<form id="submit-form" class="d-flex justify-content-between form-control">
 		<input type="text" value="" class="form-control border-0 mr-5 input-msg" placeholder="Type your message">			
