--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 	</header>		
 	
 	<main class="message-body">
-		<section class="message">
+		<ul class="message">
 			<!-- <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id molestias recusandae ad magni, iure beatae voluptatum nihil vero repellendus perferendis velit, esse nesciunt quod quae hic perspiciatis, omnis adipisci officiis sequi obcaecati illum tempore? Adipisci error beatae quas ratione quam eum facere atque optio magnam?</p> -->
-		</section>		
+		</ul>		
 				
 				
 	</main>
